<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        card_view:cardCornerRadius="2dp"
        card_view:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ripLLItemSeleccionado"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/rivhTvNombre"
                        android:textSize="20sp"
                        android:text="@string/nombre_cliente"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/fecha"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:text="@string/hora"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:text="@string/total"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/fecha_actual"
                        android:id="@+id/rivhTvFecha"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/rivhTvHora"
                        android:text="@string/hora_actual"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/rivhTvTotal"
                        android:text="@string/precio_item_cero"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>