<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        card_view:cardCornerRadius="2dp"
        card_view:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/rivhpLLItemSeleccionado"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_margin="10dp"
            android:src="@drawable/caja_producto"
            android:id="@+id/rivhpCivImagen"
            android:layout_width="70dp"
            android:layout_height="70dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:weightSum="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/rivhpTvNombre"
                        android:textSize="20sp"
                        android:text="@string/nombre_producto"
                        android:layout_weight="0.9"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/cantidad"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:text="@string/precio"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:text="@string/total"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/precio_cero"
                        android:id="@+id/rivhpEtCantidad"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/rivhpEtPrecio"
                        android:text="@string/precio_item_cero"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/rivhpTvTotal"
                        android:text="@string/precio_item_cero"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>